tests/field/set_evaluation_order.rz
undefined1.bar = undefined2 // error: undeclared variable 'undefined1'
  